[package]
name = "gh-contrib"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenv = "0.15.0"
graphql_client = "0.14.0"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
graphql_client_codegen = "0.14.0"
